# scriptlang-rust

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  KNOWLEDGE.md  Makefile  PRD-p1.md  README.md  TASKLIST.md
.cargo/: config.toml
crates/sl-api/: Cargo.toml
crates/sl-api/src/: lib.rs
crates/sl-cli/: Cargo.toml
crates/sl-cli/src/: agent.rs  boundary_runner.rs  cli_args.rs  error_map.rs  lib.rs  line_tui.rs  main.rs  models.rs  session_ops.rs  source_loader.rs  state_store.rs  tests.rs  tui.rs  tui_actions.rs  tui_render.rs  tui_state.rs
crates/sl-cli/tests/: agent_tui_roundtrip.rs  smoke_examples.rs
crates/sl-compiler/: Cargo.toml
crates/sl-compiler/src/: artifact.rs  context.rs  defaults.rs  defs_resolver.rs  error_context.rs  import_graph.rs  include_graph.rs  json_symbols.rs  lib.rs  macro_expand.rs  module_resolver.rs  pipeline.rs  sanitize.rs  script_compile.rs  source_parse.rs  tests.rs  type_expr.rs  xml_utils.rs
crates/sl-core/: Cargo.toml
crates/sl-core/src/: error.rs  lib.rs  rhai.rs  types.rs  value.rs
crates/sl-lint/: Cargo.toml
crates/sl-lint/src/: lib.rs  main.rs
crates/sl-lint/src/lint/: collector.rs  diagnostic.rs  mod.rs  render.rs  rules.rs
crates/sl-parser/: Cargo.toml
crates/sl-parser/src/: lib.rs  xml.rs
crates/sl-runtime/: Cargo.toml
crates/sl-runtime/src/: engine.rs  lib.rs
crates/sl-test-example/: Cargo.toml
crates/sl-test-example/examples/: README.md
crates/sl-test-example/src/: case.rs  lib.rs  runner.rs  source.rs
crates/sl-test-example/tests/: 01_text_code_it.rs  02_if_while_it.rs  03_choice_once_it.rs  04_call_ref_return_it.rs  05_return_transfer_it.rs  06_snapshot_flow_it.rs  07_battle_duel_it.rs  08_json_globals_it.rs  09_random_it.rs  10_once_static_it.rs  11_choice_fallover_continue_it.rs  12_while_break_continue_it.rs  13_loop_times_it.rs  14_defs_functions_it.rs  15_entry_override_recursive_it.rs  (+9 more)
crates/sl-tool/: Cargo.toml
crates/sl-tool/src/: case.rs  lib.rs  runner.rs  source.rs
docs/: rust-testability-playbook.md  scriptlang-syntax.md  sl-cli-usage.md  sl-engine-api.md  sl-lint-usage.md  testing-examples.md
examples/01-text-code/: main.script.xml
examples/05-return-transfer/: testcase.json
examples/07-battle-duel/: battle-loop.script.xml
examples/12-while-break-continue/: main.script.xml
examples/13-loop-times/: main.script.xml
examples/14-defs-functions/: testcase.json
examples/15-entry-override-recursive/: main.script.xml
examples/16-input-name/: testcase.json
examples/17-defs-global-shadowing/: battle.script.xml  shared.defs.xml
scripts/: claude-coverage-loop.sh  coverage.sh  gate.sh  stop-claude.sh
(+218 files in other folders)
