[package]
name = "sl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
ratatui.workspace = true
crossterm.workspace = true
sl-api = { path = "../sl-api" }
sl-core = { path = "../sl-core" }
sl-runtime = { path = "../sl-runtime" }
