[package]
name = "sl-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
sl-api = { path = "../sl-api" }
sl-core = { path = "../sl-core" }
sl-runtime = { path = "../sl-runtime" }
